[gd_scene load_steps=2 format=3 uid="uid://dh5bjkceow10q"]

[ext_resource type="Script" uid="uid://des6jblbrdl4g" path="res://Scenes/Mobs/mob.gd" id="1_letyr"]

[node name="MobBase" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_letyr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
